Quote '"' on CSV export correctly

BUG: 138678

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1106339